# Jobs_Parcer

./: .gitignore  README.md  main.py  pyproject.toml
src/: API.py  api.py  config.py  constants.py  filsaver.py  user_interaction.py  vacancy.py
tests/: test_vacancy.py
